cluster-configs/demo-traefik/backend-whoami/510-backend-whoami-svc.yaml
apiVersion: v1
kind:       Service

metadata:
  name:     backend-whoami-svc

spec:
  selector:
    app:    backend-whoami
  ports:
  - name:       web
    port:       80
    protocol:   TCP
