cluster-configs/demo-traefik/backend-whoami/610-backend-whoami-ingressRoute-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind:       IngressRoute
metadata:
  name:     whoami-web
spec:
  entryPoints:
    - web
  routes:
  - kind:       Rule
    match:      Host(`localhost`) && PathPrefix(`/whoami`)
    services:
    - name:     backend-whoami-svc
      port:     80
